--- a/Woboq/www/data/common.css
+++ b/Woboq/www/data/common.css
@@ -5,14 +5,14 @@ body { color:#000000; background-color:#ffffff; padding:0; margin: 0;  font-fami
 a { color: #037; border: none; text-decoration: none }
 a:hover{  text-decoration: underline }
 
-div#header { position:fixed; top:0; left:0; right:0; background-color: #f5f5f5; z-index:2; height: 5.2em; overflow: clip; }
-div#header+hr {position:fixed; top:5.2em; left:0; right:0; z-index:2}
+div#header { position:fixed; top:0; left:0; right:0; background-color: #f5f5f5; z-index:2; height: 5.7em; overflow: clip; }
+div#header+hr {position:fixed; top:5.7em; left:0; right:0; z-index:2}
 div#header input {-webkit-appearance:searchfield;-moz-appearance:searchfield;appearance:searchfield;}
-div#content { margin-top: 5.3em; }
+div#content { margin-top: 5.8em; }
 
 /* Fixme: We could experiment around with max-height: 90 vh? */
 #allSideBoxes {
-position:fixed; margin-top:1ex; top:5.2em; right:10px; z-index:1;
+position:fixed; margin-top:1ex; top:5.7em; right:10px; z-index:1;
 max-height:30em;
 }
 .sideBox {
@@ -46,7 +46,7 @@ list-style-type: none; padding: 0; margin-right: 1ex;
 table.code{ table-layout:fixed; width: 100% } /* This improves performence.  The idea is that the second column just overflows */
 .code th { width:6.5ex; padding-right:1ex; background-color:#eeeeee ;
             text-align:right; color:black; font-weight:normal;
-            -moz-user-select: none; }
+            -moz-user-select: none; user-select: none; }
 .code td { padding-left: 1ex; white-space: pre }
 
 #footer { font-size: smaller; margin:1ex; color: #333; text-align: right }
