--- a/Woboq/www/data/indexstyle.css
+++ b/Woboq/www/data/indexstyle.css
@@ -46,7 +46,10 @@ div#header input {-webkit-appearance:searchfield;-moz-appearance:searchfield;app
 hr { margin: 0; border-collapse:collapse;background-color: #e5e5e5; height:1px;border:none;  }
 
 table#tree { padding: 1ex 1ex; }
+/*
 table#tree { text-align:left; margin: auto}
+*/
+table#tree { text-align:left; margin-right:auto; margin-left:0px; }
 
 
 table#tree table { padding:0; padding-left: 4ex; margin:0; border:0; }
